@@ -672,6 +672,9 @@ function media_admin_type_manage_form($form, &$form_state, $media_type) {
       '#type' => 'textfield',
       '#title' => t('Other match type value'),
       '#default_value' => $other_default_value,
+      '#attached' => array(
+        'js' => array(drupal_get_path('module', 'media') . '/javascript/media-types-admin.js'),
+      ),
     );
 
     // Options for allowed Streams.
